--- a/Article Page.html
+++ b/Article Page.html
@@ -28,7 +28,7 @@
   
 </head>
 <body>
-<section id="menu-1o" data-rv-view="134">
+<section id="menu-1o" data-rv-view="149">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="138" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="153" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="141" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="156" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="143" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="158" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -103,7 +103,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="145" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="160" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -113,7 +113,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="147" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="162" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -124,7 +124,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="149" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="164" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -134,7 +134,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="136" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="151" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
