--- a/page21.html
+++ b/page21.html
@@ -28,7 +28,7 @@
   
 </head>
 <body>
-<section id="menu-57" data-rv-view="663">
+<section id="menu-57" data-rv-view="330">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website maker software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="667" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-59" data-rv-view="334" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="670" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5a" data-rv-view="337" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="680" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-5f" data-rv-view="339" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -103,7 +103,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="674" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-5c" data-rv-view="341" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -113,7 +113,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="665" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-58" data-rv-view="332" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
