--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -77,17 +77,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">High School New Student Orientation</h3>
+                            <h3 class="mbr-section-title display-2">Green and White Day</h3>
 
                             <div class="mbr-section-text">
-                                <p>A description of orientation and how it went, containing two reactions from new students.</p>
+                                <p>A summary of our back to school sports barbecue.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page20.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page22.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/img-20170822-1400x787.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/21083561-10155103134846747-8244472783375803781-o-1368x912.jpg"></div>
                         </div>
 
                     </div>
