--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -113,13 +113,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/man-back.jpg">
+                                <img src="assets/images/img-20170822-2000x1125.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :)&nbsp;</p>
+                                        <h2 class="mbr-section-title display-2">New Student Orientation</h2>
+                                        <p class="mbr-section-lead lead">A description of orientation and how it went.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page20.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
