--- a/Opinions.html
+++ b/Opinions.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives.html">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="http://lionstale.news">Home</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="http://lionstale.news">Home</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="130" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="130" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -77,18 +77,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Living the Dream</h3>
+                            <h3 class="mbr-section-title display-2">Why Nice Guys Finish Last</h3>
 
                             <div class="mbr-section-text">
-                                <p>While mostly based on fact, this is partially an opinion piece delving in to the problem of the migrant crisis in Europe.
-<br></p>
+                                <p>An interpretation of the statement "Nice guys finish last."<br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page16.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page23.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/italy-migrants-refugees-asylum-seekers-838x559.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/636215660129678022-2052079369-nice-guys-finish-last-600x600.jpg"></div>
                         </div>
 
                     </div>
@@ -111,12 +110,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/table.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/italy-migrants-refugees-asylum-seekers-600x400.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :) </p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Living the Dream?</h4>
+                        <h5 class="card-subtitle">Written By: Eva Morris</h5>
+                        <p class="card-text">While mostly based on fact, this is partially an opinion piece delving in to the problem of the migrant crisis in Europe. </p>
+                        <div class="card-btn"><a href="page16.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
