--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -77,17 +77,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">The Story Behind Maps</h3>
+                            <h3 class="mbr-section-title display-2">Doing Two Sciences at Higher Level in the IB</h3>
 
                             <div class="mbr-section-text">
-                                <p>By examining the evolution of maps through history, this article uncovers how maps affect the way we perceive the world.</p>
+                                <p>A guide and evaluation of doing two higher level sciences in the IB.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page18.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page24.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/map2-420x412.png"></div>
+                            <div class="mbr-figure"><img src="assets/images/chemical-science-1400x933.jpg"></div>
                         </div>
 
                     </div>
@@ -113,13 +113,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/man-back.jpg">
+                                <img src="assets/images/8d95971a407b72eaa52a5edb9c7754bc.gif">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :)&nbsp;</p>
+                                        <h2 class="mbr-section-title display-2">The Story Behind Maps</h2>
+                                        <p class="mbr-section-lead lead">By examining the evolution of maps through history, this article uncovers how maps affect the way we perceive the world.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page18.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
