--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="29" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="29" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -110,12 +110,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/hot-dog-mascots-600x382.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/map2-420x412.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Lucky to Be Lions</h4>
-                        <h5 class="card-subtitle">Written By: Ceola Daly</h5>
-                        <p class="card-text">What does our mascot mean to us?<br><br></p>
-                        <div class="card-btn"><a href="page13.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">The Story Behind Maps</h4>
+                        <h5 class="card-subtitle">Written By: Camille Kummer</h5>
+                        <p class="card-text">By examining the evolution of maps through history, this article uncovers how maps affect the way we perceive the world.<br><br></p>
+                        <div class="card-btn"><a href="page18.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
