--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -77,17 +77,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Green and White Day</h3>
+                            <h3 class="mbr-section-title display-2">CAS Fair</h3>
 
                             <div class="mbr-section-text">
-                                <p>A summary of our back to school sports barbecue.</p>
+                                <p>An article describing the high school CAS event and information presented in it</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page22.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page25.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/21083561-10155103134846747-8244472783375803781-o-1368x912.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/img-1400x1050.jpg"></div>
                         </div>
 
                     </div>
@@ -106,7 +106,7 @@
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-13" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="2"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-13" class="" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -128,13 +128,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/sparklers.jpg">
+                                <img src="assets/images/21083561-10155103134846747-8244472783375803781-o-1368x912.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-3 text-xs-right">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :)&nbsp;</p>
+                                        <h2 class="mbr-section-title display-2">Green and White Day</h2>
+                                        <p class="mbr-section-lead lead">A summary of our back to school sports barbecue.</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page22.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
