--- a/page25.html
+++ b/page25.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-6g" data-rv-view="645" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -121,7 +121,7 @@
                     <div><img src="assets/images/img-1400x1050.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">The GAIA group, which, if you multiply this number by 8, looks more like what it's first meeting with new members looked like on Wednesday at lunch.</div>
+                        <div class="container">The GAIA group, which, if you multiply this number by 8, looks more like what its first meeting with new members looked like on Wednesday at lunch.</div>
                     </figcaption>
 
                 </figure>
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/img-1400x1050.jpg"></div>
+                    <div><img src="assets/images/img-0556-1-1400x1050.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">The band playing a song.</div>
