--- a/Events.html
+++ b/Events.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="14" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -80,7 +80,7 @@
                             <h3 class="mbr-section-title display-2">CAS Fair</h3>
 
                             <div class="mbr-section-text">
-                                <p>An article describing the high CAS CAS event and information presented in it</p>
+                                <p>An article describing the high school CAS event and information presented in it</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page17.html">MORE</a></div>
