--- a/page25.html
+++ b/page25.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-77" data-rv-view="1007" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/a">web page builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-77" data-rv-view="1007" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -84,23 +84,6 @@
         </div>
     </div>
 
-</section>
-
-<section class="mbr-section mbr-section__container" id="image2-7d" data-rv-view="1020" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <figure class="mbr-figure">
-                    <div><img src="assets/images/img-1400x1050.jpg"></div>
-
-                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">The dance team.</div>
-                    </figcaption>
-
-                </figure>
-            </div>
-        </div>
-    </div>
 </section>
 
 <section class="mbr-section article mbr-section__container" id="content1-7a" data-rv-view="1014" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
