--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="140" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="140" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Doing Two Sciences at Higher Level in the IB</h3>
+                            <h3 class="mbr-section-title display-2">Applying to the United Kingdom</h3>
 
                             <div class="mbr-section-text">
-                                <p>A guide and evaluation of doing two higher level sciences in the IB.</p>
+                                <p>Advice on how to apply to universities in the U.K.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page24.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page29.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/chemical-science-1400x933.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/uk-1170x600.jpg"></div>
                         </div>
 
                     </div>
@@ -102,7 +102,7 @@
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-16" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-16" class="" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -124,13 +124,13 @@
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/sparklers.jpg">
+                                <img src="assets/images/chemical-science-1400x933.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-3 text-xs-right">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :)&nbsp;</p>
+                                        <h2 class="mbr-section-title display-2">Doing Two Sciences at Higher Level in the IB</h2>
+                                        <p class="mbr-section-lead lead">A guide and evaluation of doing two higher level sciences in the IB.&nbsp;</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page24.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
