--- a/Opinions.html
+++ b/Opinions.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="193" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="193" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -76,7 +76,7 @@
                             <h3 class="mbr-section-title display-2">Time to Grow Up<br>Mr. Kim Jong-Un</h3>
 
                             <div class="mbr-section-text">
-                                <p>An piece discussing the North Korean missiles.&nbsp;<br>Note: Since this article was written, a second <br>missile was launched on the 15th September. <br><br></p>
+                                <p>A piece discussing the North Korean missiles.&nbsp;<br>Note: Since this article was written, a second <br>missile was launched on the 15th September. <br><br></p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page26.html">MORE</a></div>
